--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = firmware/ChibiOS
 	url = https://github.com/ChibiOS/ChibiOS.git
 	branch = stable_17.6.x
+[submodule "layout/agg-kicad"]
+	path = layout/agg-kicad
+	url = https://github.com/adamgreig/agg-kicad.git
