--- a/firmware/web/build
+++ b/firmware/web/build
@@ -3,17 +3,61 @@
 source_dir="$(cd $(dirname ${BASH_SOURCE[0]}) && pwd)"
 cd $source_dir
 
-echo "Clearing dist/ .."
+COLOUR_GREEN='\033[0;32m'
+COLOUR_YELLOW='\033[1;33m'
+COLOUR_PURPLE='\033[0;35m'
+COLOUR_RED='\033[0;31m'
+COLOUR_OFF='\033[0;00m'
+CLEAR_LINE='\033[2K'
+
+_ERROR_="${COLOUR_RED}[ERROR]${COLOUR_OFF}"
+_INFO_="${COLOUR_PURPLE}[INFO]${COLOUR_OFF}"
+_DEBUG_="${COLOUR_YELLOW}[DEBUG]${COLOUR_OFF}"
+
+opt_verbose=false
+
+printf_v() {
+	if $opt_verbose;
+	then
+		printf $1;
+	fi
+}
+printf_nv() {
+	if ! $opt_verbose;
+	then
+		printf $1;
+	fi
+}
+
+## Read Flags
+OPTIND=1
+while getopts ":v" opt; do
+  case "$opt" in
+    v) # Debug
+      opt_verbose=true
+      ;;
+    ?) # Illegal Option
+      echo -e "$_ERROR_ Illegal option '$OPTARG'"
+      exit 3
+      ;;
+  esac
+done
+for i in `seq 2 $OPTIND`; do shift; done
+
+printf "$_INFO_ Packing web files.. ";
+printf_v "\n"
+
+printf_v "Clearing dist/..\n"
 rm -fr dist/
 cp -r src/ dist/
 
-echo "Compressing files.."
+printf_v "Compressing files..\n"
 for file in $(find dist/ -type f)
 do
 	gzip -9 $file
 done
 
-echo "Packing headers.."
+printf_v "Packing headers..\n"
 for file in $(find dist/ -type f -name *.gz)
 do
 	file_path=${file%/*}
@@ -23,5 +67,6 @@ do
 	  xxd -i $file_basename > "${file_headername}"
 	  rm $file_basename
 	popd > /dev/null
-	echo "> ${file_path}/${file_headername}"
+	printf_v " - ${file_basename}\n"
 done
+printf_nv "${COLOUR_GREEN}OK${COLOUR_OFF}\n";
